# Testing-in-Rust

./: Cargo.toml  Makefile  README.md
examples/: check_lib.rs
fuzz-target/: Cargo.toml  build.rs
fuzz-target/fuzz_out/default/: cmdline  fuzz_bitmap  fuzzer_setup  fuzzer_stats  plot_data
fuzz-target/fuzz_out/default/crashes/: README.txt  id:000000,sig:06,src:000000,time:210,execs:27,op:havoc,rep:7
fuzz-target/src/: main.rs
proptest-regressions/: add.txt
src/: add.rs  email.rs  faker.rs  lib.rs  main.rs  mul.rs
src/snapshots/: example_test__tests__stdout_insta_find_a_match.snap
tests/: general.rs
