[package]
name = "example_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "example_test"
path = "src/lib.rs"
doctest = false
test = true 

[dependencies]
fake = { version = "2.8", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml"] }
mockall = "0.11.4"
proptest = "1.2.0"

assert_cmd = "2.*"
assert_fs = "*"
predicates = "3.0.3"
 