[package]
name = "fuzz-target"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "parse_result"
path = "src/bin/parse_result.rs"

[dependencies]
afl = "*"
example_test = {path = ".."}
arbitrary = "1.*"


